--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.1",
     "mongoose-slug-updater": "^3.3.0",
