--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongodb": "^6.10.0",
@@ -28,7 +29,6 @@
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
-    "sass": "^1.79.5",
     "socket.io": "^4.8.0",
     "streamifier": "^0.1.1",
     "validator": "^13.12.0"
