--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.1",
     "mongoose-slug-updater": "^3.3.0",
