--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
+    "html-pdf-node": "^1.0.8",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
